<resources>
    <string name="app_name">Comp380</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="emptySignup">All fields must be filled to sign up</string>
    <string name="nonMatchPassword">Passwords do not match</string>


</resources>
